src/app.css
@import 'tailwindcss';
@import '@fontsource/fira-mono';
@import 'highlight.js/styles/github-dark.css';

@config '../tailwind.config.ts';

@plugin '@tailwindcss/forms';
@plugin '@tailwindcss/typography';

@font-face {
	font-family: 'Block Blueprint';
	src: url('/fonts/BlockBlueprint.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'Joystix';
	src: url('/fonts/joystix monospace.otf') format('opentype');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'New Mozane';
	src: url('/fonts/new_monzane.otf') format('opentype');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'Pixel Grid Square Bold M';
	src: url('/fonts/pixelgrid-squareboldm.woff') format('woff');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'Pixel Grid Square Bold S';
	src: url('/fonts/pixelgrid/pixelgrid-squarebolds.woff') format('woff');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'Ari W9500 Bold';
	src: url('/fonts/ari-w9500-bold.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}

:root {
	--font-pressstart2p: 'Press Start 2P', normal;
	--font-blockblueprint: 'Block Blueprint', sans-serif;
	--font-joystix: 'Joystix', sans-serif;
	--font-montserrat: 'Montserrat', sans-serif;
	--font-playfairdisplay: 'Playfair Display', medium;
	--font-inter: 'Inter', sans-serif;
	--font-pixelify: 'Pixelify Sans', sans-serif;
	--font-pixelgrid: 'Pixel Grid Square Bold M', sans-serif;
	--font-newmonzane: 'New Mozane', sans-serif;
	--font-ariw9500: 'Ari W9500 Bold', sans-serif;
	--font-opensans: 'Open Sans', sans-serif;
}

html {
	font-family: var(--font-opensans);
	background-color: var(--color-bg);
	color: var(--color-text);
	transition:
		background-color 0.3s ease,
		color 0.3s ease;
}

[data-underline-links='true'] a {
	text-decoration: underline !important;
	text-decoration-thickness: 2px !important;
	text-underline-offset: 5px;
}

[data-reduce-motion='true'] * {
	transition: none !important;
	animation: none !important;
}

[data-reduce-motion='true'] {
	scroll-behavior: auto !important;
}

